# ParquetDataFormat

./: .gitignore  LICENSE  Parquet.md  README.md  pyproject.toml
R/: ArrowCompression.Rmd  ArrowS3.Rmd  ArrowTimeStamp.Rmd
data/: colum_custom_meta.parquet  custom_meta.parquet  json_custom_meta.parquet  source.csv
docs/: Parquet_format_Introduction.md  compression_stats.csv  parquet_tools.md
notebook/basic/: SparkParquetBasics.ipynb  SparkReadLargeDataSet.ipynb
notebook/compatibility/: ArrowSparkTimeStamp.ipynb  PyarrowReadLocalParquet.ipynb  PyarrowReadSpark.ipynb  SparkArrowCompression.ipynb  SparkReadArrow.ipynb  parquet_file_with_special_character.ipynb
notebook/compatibility/pengfei/diffusion/data_format/timestamp_compability/spark_time_v1.0/: .part-00000-c35a51ca-fbf7-469e-b38d-b799cba88d69-c000.snappy.parquet.crc
notebook/metadata/: 01.BasicMeta.ipynb  02.AdvanceMeta.ipynb  BasicMeta.ipynb
s3_connect/: s3_connect.ipynb
src/: tmp.py
src/bash/: run_read_s3.sh  s3_download.sh  upload_minio.sh
src/compatibility/: ArrowSparkTimeStamp.py  PyarrowReadSpark.py  README.md  SparkReadPyarrow.py
