[tool.poetry]
name = "src"
version = "0.1.0"
description = "use pyarrow read parquet and write parquet"
authors = ["pengfei <liu.pengfei@hotmail.fr>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyarrow = "^5.0.0"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
